--- a/HW3/src/Makefile
+++ b/HW3/src/Makefile
@@ -1,10 +1,13 @@
 all: a.out
 
-a.out :  calc.c calc.tab.o
-	gcc calc.c calc.tab.o
+a.out :  calc.c calc.tab.o types.o
+	gcc calc.c calc.tab.o types.o
 
-calc.tab.o: calc.tab.h calc.tab.c
+calc.tab.o: calc.tab.h calc.tab.c types.h
 	gcc -c calc.tab.c
+
+types.o: types.h types.c
+	gcc -c types.c
 
 test:
 	./a.out ../input.txt
