Adding transistion functions

--- a/HW3/src/Makefile
+++ b/HW3/src/Makefile
@@ -1,13 +1,16 @@
 all: a.out
 
-a.out :  calc.c calc.tab.o types.o
-	gcc calc.c calc.tab.o types.o
+a.out :  calc.c calc.tab.o types.o functions.o
+	gcc calc.c calc.tab.o types.o functions.o
 
-calc.tab.o: calc.tab.h calc.tab.c types.h
+calc.tab.o: calc.tab.h calc.tab.c types.h functions.h
 	gcc -c calc.tab.c
 
 types.o: types.h types.c
 	gcc -c types.c
+
+functions.o : functions.h functions.c
+	gcc -c functions.c
 
 test:
 	./a.out ../input.txt
