--- a/HW3/src/Makefile
+++ b/HW3/src/Makefile
@@ -1,19 +1,19 @@
 all: a.out
 
 a.out :  calc.c calc.tab.o types.o functions.o additional.o
-	gcc calc.c calc.tab.o types.o functions.o additional.o
+	gcc calc.c calc.tab.o types.o functions.o additional.o -Wall -g
 
 calc.tab.o: calc.tab.h calc.tab.c types.h functions.h
-	gcc -c calc.tab.c
+	gcc -c calc.tab.c -Wall -g
 
 types.o: types.h types.c
-	gcc -c types.c
+	gcc -c types.c -Wall -g
 
 functions.o : functions.h functions.c
-	gcc -c functions.c
+	gcc -c functions.c -Wall -g
 
 additional.o : additional.h additional.c
-	gcc -c additional.c
+	gcc -c additional.c -Wall -g
 
 test:
 	./a.out ../input.txt
