YEAH, it is in a working state that does ID's, END's and BAD's

--- a/HW3/src/Makefile
+++ b/HW3/src/Makefile
@@ -19,5 +19,8 @@ test:
 	./a.out ../input.txt
 	diff ../output.tst calc.tkn
 
+test_functions:
+	gcc test_function.c functions.c -o test.out
+
 clean:
 	@rm -f a.out *.o *.tkn
