Updated makefile and words.l

--- a/HW7/Makefile
+++ b/HW7/Makefile
@@ -1,10 +1,16 @@
-all: words.out
+all: words.out pascal.out
 
 words.out: words.c
 	gcc words.c -o words.out
 
 words.c: words.l
 	flex -L -o words.c words.l
+
+pascal.out: pascal.c
+	gcc pascal.c -o pascal.out
+
+pascal.c: pascal.l
+	flex -L -o pascal.c pascal.l
 
 clean:
 	@rm -rf *.c
