General idea going strong

--- a/HW7/Makefile
+++ b/HW7/Makefile
@@ -1,4 +1,4 @@
-all: words.out pascal.out
+all: words.out pascal.out complex.out
 
 words.out: words.c
 	gcc words.c -o words.out
@@ -11,6 +11,12 @@ pascal.out: pascal.c
 
 pascal.c: pascal.l
 	flex -L -o pascal.c pascal.l
+
+complex.out: complex.c
+	gcc complex.c -o complex.out
+
+complex.c: complex.l
+	flex -L -o complex.c complex.l
 
 clean:
 	@rm -rf *.c
