Makefile works and added suggested code from ppt for warnings, but doesnt seem to make a difference

--- a/HW8/Makefile
+++ b/HW8/Makefile
@@ -1,10 +1,13 @@
-all: simpleCalc.tab.c
+all: calc
 
-simpleCalc.tab.c: simpleCalc.y lex.yy.c
-	bison simpleCalc.y
+calc : simpleCalc.tab.c simpleCalc.tab.h simpleCalc.c
+	gcc simpleCalc.tab.c simpleCalc.tab.h simpleCalc.c -o calc
 
-lex.yy.c: simpleCalc.l
-	flex simpleCalc.l
+simpleCalc.c: simpleCalc.l
+	flex -L -o simpleCalc.c simpleCalc.l
+
+simpleCalc.tab.c: simpleCalc.y
+	bison -d simpleCalc.y
 
 clean:
-	@rm -f *.c
+	@rm -f *.c *.gch calc a.out *.h
