--- a/HW8/Rakefile
+++ b/HW8/Rakefile
@@ -3,7 +3,7 @@ require 'rake/testtask'
 Rake::TestTask.new do |t|
   `make clean`
   `make`
-  t.test_files = FileList['1_test.rb']
+  t.test_files = FileList['*_test.rb']
   t.verbose = true
 end
 
